<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Register"
                android:textColor="@color/primaryText"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:nextFocusLeft="@id/name_register"
                    android:nextFocusUp="@id/name_register" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countrycode"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="+000"
                    android:textSize="18dp"
                    android:visibility="gone" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/prompt_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:nextFocusLeft="@id/phone_register"
                        android:nextFocusUp="@id/phone_register" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/terms"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/termsandcondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="terms and condition"
                android:textColor="@color/clickableText" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_bg"
                android:text="Sign up"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/already_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/already_registered"
                android:textColor="@color/clickableText" />

            <TextView
                android:id="@+id/login_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/login_here"
                android:textColor="@color/clickableText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>