<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:paddingLeft="16dp" android:paddingTop="16dp" android:paddingRight="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent" android:layout_height="match_parent">





        <LinearLayout android:orientation="vertical" android:layout_marginTop="16dp" android:id="@+id/email_login_form" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="24dp"
                android:gravity="center"
                android:text="Login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/countrycode"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:text="+000"
                    android:textSize="18dp"
                    android:visibility="gone"
                    android:gravity="bottom"/>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content" android:layout_width="fill_parent">

                    <EditText android:id="@+id/phone_login" android:nextFocusUp="@id/phone_login"
                        android:nextFocusLeft="@id/phone_login" android:gravity="bottom" android:imeOptions="actionNext"  android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/prompt_phone" android:maxLines="1"  android:inputType="number"   android:imeActionId="@+id/login" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/colorPrimaryDark"
                android:text="Login" />

            <TextView
                android:id="@+id/already_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/clickableText"
                android:text="@string/not_registered"
                />

            <TextView
                android:id="@+id/login_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/clickableText"
                android:text="@string/register_here"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>